<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="50sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:textSize="30sp"
        android:background="@color/white"
        android:hint="@string/hint"
        android:inputType="number"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <RadioGroup
        android:id="@+id/option"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/even"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/even"
            android:textColor="@color/white"
            android:textSize="20sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/odd"
            app:layout_constraintTop_toBottomOf="@id/input" />

        <RadioButton
            android:id="@+id/odd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/odd"
            android:textColor="@color/white"
            android:textSize="20sp"

            app:layout_constraintStart_toEndOf="@id/even"
            app:layout_constraintEnd_toStartOf="@+id/square"
            app:layout_constraintTop_toBottomOf="@id/input" />

        <RadioButton
            android:id="@+id/square"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/square"
            android:textColor="@color/white"
            android:textSize="20sp"

            app:layout_constraintStart_toEndOf="@id/odd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input" />


    </RadioGroup>

    <Button
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/show"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show" />

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result" />


</androidx.constraintlayout.widget.ConstraintLayout>